--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -230,8 +230,15 @@
     <Content Include="Images\APF Logo.png" />
     <Content Include="Images\arrow.png" />
     <Content Include="Images\bg-gradient-grey.gif" />
+    <Content Include="Images\btn-add-candidate-click.png" />
+    <Content Include="Images\btn-add-candidate.png" />
     <Content Include="Images\cross.png" />
+    <Content Include="Images\icn-checkbox-checked.png" />
+    <Content Include="Images\icn-checkbox.png" />
+    <Content Include="Images\icn-radio-checked.png" />
+    <Content Include="Images\icn-radio.png" />
     <Content Include="Images\logo-apf.png" />
+    <Content Include="Images\sprite-input-buttons.png" />
     <Content Include="Images\tick.png" />
     <Content Include="Scripts\exam.js" />
     <Content Include="Scripts\global.js" />
