--- a/APFTestingUI/packages.config
+++ b/APFTestingUI/packages.config
@@ -1,10 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
+  <package id="DotNetOpenAuth.AspNet" version="4.2.2.13055" targetFramework="net45" />
+  <package id="DotNetOpenAuth.Core" version="4.2.2.13055" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.2.2.13055" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth.Core" version="4.2.2.13055" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.Core" version="4.2.2.13055" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.2.2.13055" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net45" />
-  <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.11.0" targetFramework="net45" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.1" targetFramework="net45" />
@@ -16,8 +22,8 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30116.0" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30116.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.5.3" targetFramework="net45" />
