--- a/APFTestingModel/APFTestingModel.csproj
+++ b/APFTestingModel/APFTestingModel.csproj
@@ -89,7 +89,8 @@
     <Compile Include="ExamStateMachine\NoExamCreated.cs" />
     <Compile Include="ExamStateMachine\TheoryComponentFailed.cs" />
     <Compile Include="ExamStateMachine\TheoryComponentInProgress.cs" />
-    <Compile Include="DataStructures.cs" />
+    <Compile Include="Helpers\DataStructures.cs" />
+    <Compile Include="Helpers\Enums.cs" />
     <Compile Include="Interfaces\IFacade.cs" />
     <Compile Include="Interfaces\ICandidate.cs" />
     <Compile Include="Interfaces\IExam.cs" />
