--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\CandidateController.cs" />
+    <Compile Include="Controllers\DummyPack.cs" />
     <Compile Include="Controllers\DummyTask.cs" />
     <Compile Include="Controllers\PracticalController.cs" />
     <Compile Include="Models\Candidate\ViewPacker.cs" />
@@ -203,6 +204,10 @@
     <Compile Include="Models\Exam\TheoryComponentSummary.cs" />
     <Compile Include="Models\Exam\VoidExam.cs" />
     <Compile Include="Models\Practical\AssessmentTaskDisplayItem.cs" />
+    <Compile Include="Models\Practical\PackerEdit.cs" />
+    <Compile Include="Models\Practical\DemonstratedPackDisplayItem.cs" />
+    <Compile Include="Models\Practical\PackerInput.cs" />
+    <Compile Include="Models\Practical\PackerView.cs" />
     <Compile Include="Models\Practical\PilotView.cs" />
     <Compile Include="Models\Practical\PilotInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -365,6 +370,9 @@
     <Content Include="Views\Candidate\ViewPacker.cshtml" />
     <Content Include="Views\Practical\PilotInput.cshtml" />
     <Content Include="Views\Practical\PilotView.cshtml" />
+    <Content Include="Views\Practical\PackerView.cshtml" />
+    <Content Include="Views\Practical\PackerInput.cshtml" />
+    <Content Include="Views\Practical\PackerEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
