--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -214,6 +214,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\images\cross.png" />
+    <Content Include="Content\images\img-q18-knots.jpg" />
     <Content Include="Content\images\tick.png" />
     <Content Include="Content\PIE.htc" />
     <Content Include="Content\themes\base\images\animated-overlay.gif" />
