unit test for practicalcomponentpacker

--- a/APFTestingModel.Tests/APFTestingModel.Tests.csproj
+++ b/APFTestingModel.Tests/APFTestingModel.Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="MockPossibleAnswer.cs" />
     <Compile Include="MockSelectedTheoryQuestion.cs" />
     <Compile Include="MockTheoryComponentPilot.cs" />
+    <Compile Include="PracticalComponentPackerTest.cs" />
     <Compile Include="TheoryComponentTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -66,6 +67,9 @@
     <None Include="App.Config">
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Mocks\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
