--- a/APFTestingModel.Tests/APFTestingModel.Tests.csproj
+++ b/APFTestingModel.Tests/APFTestingModel.Tests.csproj
@@ -50,11 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AnswerTest.cs" />
     <Compile Include="MockPossibleAnswer.cs" />
     <Compile Include="MockSelectedTheoryQuestion.cs" />
     <Compile Include="MockTheoryComponentPilot.cs" />
     <Compile Include="TheoryComponentTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TheoryQuestionTest.cs" />
+    <Compile Include="AssessmentTaskPackerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\APFTestingModel\APFTestingModel.csproj">
