--- a/APFTestingModel.Tests/APFTestingModel.Tests.csproj
+++ b/APFTestingModel.Tests/APFTestingModel.Tests.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="APFTestingModel.Fakes">
+      <HintPath>FakesAssemblies\APFTestingModel.Fakes.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=11.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -55,6 +59,10 @@
     <Compile Include="MockTheoryComponentPilot.cs" />
     <Compile Include="TheoryComponentTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectedTheoryQuestionTest.cs" />
+    <Compile Include="CandidatePilotTest.cs" />
+    <Compile Include="CandidatePackerTest.cs" />
+    <Compile Include="AssessmentTaskPilotTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\APFTestingModel\APFTestingModel.csproj">
@@ -66,6 +74,7 @@
     <None Include="App.Config">
       <SubType>Designer</SubType>
     </None>
+    <Fakes Include="Fakes\APFTestingModel.fakes" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
