--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -170,12 +170,10 @@
     <Compile Include="Areas\Administration\Controllers\ExaminerController.cs" />
     <Compile Include="Areas\Administration\Controllers\HomeController.cs" />
     <Compile Include="Areas\Administration\Controllers\QuestionManagementController.cs" />
-
     <Compile Include="Areas\Administration\Models\ExaminerManagement\CreateExaminer.cs" />
     <Compile Include="Areas\Administration\Models\ExaminerManagement\EditExaminer.cs" />
-
     <Compile Include="Areas\Administration\Controllers\TheoryFormatController.cs" />
-
+    <Compile Include="Areas\Administration\Models\ExaminerManagement\Index.cs" />
     <Compile Include="Areas\Administration\Models\QuestionManagement\AnswerItem.cs" />
     <Compile Include="Areas\Administration\Models\QuestionManagement\Create.cs" />
     <Compile Include="Areas\Administration\Models\QuestionManagement\IndexPilot.cs" />
@@ -327,19 +325,15 @@
     <Content Include="Scripts\global.js" />
     <Content Include="Scripts\html5shiv.js" />
     <Content Include="Areas\Administration\Views\QuestionManagement\IndexPilot.cshtml" />
-
     <Content Include="Areas\Administration\Views\Examiner\Create.cshtml" />
-    <Content Include="Areas\Administration\Views\Web.config" />
-
-
     <Content Include="Areas\Administration\Views\AssessmentTask\Details.cshtml">
       <SubType>Code</SubType>
     </Content>
     <Content Include="Areas\Administration\Views\QuestionManagement\CreatePilot.cshtml" />
-
     <Content Include="Areas\Administration\Views\TheoryFormat\Index.cshtml" />
-
-
+    <Content Include="Areas\Administration\Views\Examiner\Index.cshtml" />
+    <Content Include="Areas\Administration\Views\Web.config" />
+    <Content Include="Areas\Administration\Views\Examiner\Edit.cshtml" />
     <None Include="Properties\PublishProfiles\Web Deploy - Staging [b].pubxml" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
