--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\APFTestingMembership\packages.config" />
   <repository path="..\APFTestingModel\packages.config" />
   <repository path="..\APFTestingUI.Tests\packages.config" />
   <repository path="..\APFTestingUI\packages.config" />
