--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -170,6 +170,8 @@
     <Compile Include="Areas\Administration\Controllers\ExaminerController.cs" />
     <Compile Include="Areas\Administration\Controllers\HomeController.cs" />
     <Compile Include="Areas\Administration\Controllers\QuestionManagementController.cs" />
+    <Compile Include="Areas\Administration\Models\AssessmentTaskManagement\EditAssessmentTask.cs" />
+    <Compile Include="Areas\Administration\Models\AssessmentTaskManagement\CreateAssessmentTask.cs" />
     <Compile Include="Areas\Administration\Models\ExaminerManagement\CreateExaminer.cs" />
     <Compile Include="Areas\Administration\Models\ExaminerManagement\EditExaminer.cs" />
     <Compile Include="Areas\Administration\Controllers\TheoryFormatController.cs" />
@@ -334,6 +336,9 @@
     <Content Include="Areas\Administration\Views\Examiner\Index.cshtml" />
     <Content Include="Areas\Administration\Views\Web.config" />
     <Content Include="Areas\Administration\Views\Examiner\Edit.cshtml" />
+    <Content Include="Areas\Administration\Views\AssessmentTask\Create.cshtml" />
+    <Content Include="Areas\Administration\Views\AssessmentTask\Edit.cshtml" />
+    <Content Include="Areas\Administration\Views\AssessmentTask\DeletedConfirmation.cshtml" />
     <None Include="Properties\PublishProfiles\Web Deploy - Staging [b].pubxml" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
