Added delete and activate function to examiner management

--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -170,20 +170,20 @@
     <Compile Include="Areas\Administration\Controllers\ExaminerController.cs" />
     <Compile Include="Areas\Administration\Controllers\HomeController.cs" />
     <Compile Include="Areas\Administration\Controllers\QuestionManagementController.cs" />
-    <Compile Include="Areas\Administration\Models\AssessmentTaskManagement\EditAssessmentTask.cs" />
-    <Compile Include="Areas\Administration\Models\AssessmentTaskManagement\CreateAssessmentTask.cs" />
-    <Compile Include="Areas\Administration\Models\ExaminerManagement\CreateExaminer.cs" />
-    <Compile Include="Areas\Administration\Models\ExaminerManagement\EditExaminer.cs" />
+    <Compile Include="Areas\Administration\Views\Models\AssessmentTaskManagement\EditAssessmentTask.cs" />
+    <Compile Include="Areas\Administration\Views\Models\AssessmentTaskManagement\CreateAssessmentTask.cs" />
+    <Compile Include="Areas\Administration\Views\Models\ExaminerManagement\CreateExaminer.cs" />
+    <Compile Include="Areas\Administration\Views\Models\ExaminerManagement\EditExaminer.cs" />
     <Compile Include="Areas\Administration\Controllers\TheoryFormatController.cs" />
-    <Compile Include="Areas\Administration\Models\ExaminerManagement\Index.cs" />
-    <Compile Include="Areas\Administration\Models\QuestionManagement\AnswerItem.cs" />
-    <Compile Include="Areas\Administration\Models\QuestionManagement\Create.cs" />
-    <Compile Include="Areas\Administration\Models\QuestionManagement\IndexPilot.cs" />
-    <Compile Include="Areas\Administration\Models\QuestionManagement\TheoryQuestionItem.cs" />
-    <Compile Include="Areas\Administration\Models\TheoryFormat\Create.cs" />
-    <Compile Include="Areas\Administration\Models\TheoryFormat\Edit.cs" />
-    <Compile Include="Areas\Administration\Models\TheoryFormat\FormatDisplayItem.cs" />
-    <Compile Include="Areas\Administration\Models\TheoryFormat\Index.cs" />
+    <Compile Include="Areas\Administration\Views\Models\ExaminerManagement\Index.cs" />
+    <Compile Include="Areas\Administration\Views\Models\QuestionManagement\AnswerItem.cs" />
+    <Compile Include="Areas\Administration\Views\Models\QuestionManagement\Create.cs" />
+    <Compile Include="Areas\Administration\Views\Models\QuestionManagement\IndexPilot.cs" />
+    <Compile Include="Areas\Administration\Views\Models\QuestionManagement\TheoryQuestionItem.cs" />
+    <Compile Include="Areas\Administration\Views\Models\TheoryFormat\Create.cs" />
+    <Compile Include="Areas\Administration\Views\Models\TheoryFormat\Edit.cs" />
+    <Compile Include="Areas\Administration\Views\Models\TheoryFormat\FormatDisplayItem.cs" />
+    <Compile Include="Areas\Administration\Views\Models\TheoryFormat\Index.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Areas\Administration\Controllers\AssessmentTaskController.cs" />
@@ -224,8 +224,8 @@
     <Compile Include="Models\Exam\TheoryComponentResult.cs" />
     <Compile Include="Models\Exam\TheoryComponentSummary.cs" />
     <Compile Include="Models\Exam\VoidExam.cs" />
-    <Compile Include="Areas\Administration\Models\AssessmentTaskManagement\AssessmentTaskItem.cs" />
-    <Compile Include="Areas\Administration\Models\AssessmentTaskManagement\AssessmentTaskList.cs" />
+    <Compile Include="Areas\Administration\Views\Models\AssessmentTaskManagement\AssessmentTaskItem.cs" />
+    <Compile Include="Areas\Administration\Views\Models\AssessmentTaskManagement\AssessmentTaskList.cs" />
     <Compile Include="Models\Practical\AssessmentTaskInputItem.cs" />
     <Compile Include="Models\Practical\AssessmentTaskDisplayItem.cs" />
     <Compile Include="Models\Practical\PackerEdit.cs" />
