--- a/APFTestingModel/APFTestingModel.csproj
+++ b/APFTestingModel/APFTestingModel.csproj
@@ -158,6 +158,8 @@
     <Compile Include="Partials\PracticalComponent\PracticalComponent.cs" />
     <Compile Include="Partials\PracticalComponent\PracticalComponentPacker.cs" />
     <Compile Include="Partials\PracticalComponent\PracticalComponentPilot.cs" />
+    <Compile Include="Partials\PracticalComponent\PracticalComponentTemplatePacker.cs" />
+    <Compile Include="Partials\PracticalComponent\PracticalComponentTemplatePilot.cs" />
     <Compile Include="Partials\PracticalComponent\SelectedAssessmentTask.cs" />
     <Compile Include="Partials\TheoryComponent\Answer.cs" />
     <Compile Include="Partials\TheoryComponent\PossibleAnswer.cs" />
