--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -167,15 +167,23 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\Administration\AdministrationAreaRegistration.cs" />
     <Compile Include="Areas\Administration\Controllers\AdminBaseController.cs" />
+    <Compile Include="Areas\Administration\Controllers\PracticalTemplatePackerController.cs" />
     <Compile Include="Areas\Administration\Controllers\ExaminerController.cs" />
     <Compile Include="Areas\Administration\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Administration\Controllers\PracticalTemplatePilotController.cs" />
     <Compile Include="Areas\Administration\Controllers\QuestionManagementController.cs" />
     <Compile Include="Areas\Administration\Models\AssessmentTaskManagement\EditAssessmentTask.cs" />
     <Compile Include="Areas\Administration\Models\AssessmentTaskManagement\CreateAssessmentTask.cs" />
+    <Compile Include="Areas\Administration\Models\PracticalTemplatePacker\Create.cs" />
+    <Compile Include="Areas\Administration\Models\PracticalTemplatePacker\Index.cs" />
+    <Compile Include="Areas\Administration\Models\PracticalTemplatePacker\PackerTemplateDisplayItem.cs" />
     <Compile Include="Areas\Administration\Models\ExaminerManagement\CreateExaminer.cs" />
     <Compile Include="Areas\Administration\Models\ExaminerManagement\EditExaminer.cs" />
     <Compile Include="Areas\Administration\Controllers\TheoryFormatController.cs" />
     <Compile Include="Areas\Administration\Models\ExaminerManagement\Index.cs" />
+    <Compile Include="Areas\Administration\Models\PracticalTemplatePilot\Index.cs" />
+    <Compile Include="Areas\Administration\Models\PracticalTemplatePilot\PilotTemplateTask.cs" />
+    <Compile Include="Areas\Administration\Models\PracticalTemplatePilot\PilotTemplateDisplayItem.cs" />
     <Compile Include="Areas\Administration\Models\QuestionManagement\AnswerItem.cs" />
     <Compile Include="Areas\Administration\Models\QuestionManagement\Create.cs" />
     <Compile Include="Areas\Administration\Models\QuestionManagement\IndexPilot.cs" />
@@ -345,6 +353,9 @@
     <Content Include="Areas\Administration\Views\AssessmentTask\Create.cshtml" />
     <Content Include="Areas\Administration\Views\AssessmentTask\Edit.cshtml" />
     <Content Include="Areas\Administration\Views\AssessmentTask\DeletedConfirmation.cshtml" />
+    <Content Include="Areas\Administration\Views\PracticalTemplatePilot\Index.cshtml" />
+    <Content Include="Areas\Administration\Views\PracticalTemplatePacker\Index.cshtml" />
+    <Content Include="Areas\Administration\Views\PracticalTemplatePacker\Create.cshtml" />
     <None Include="Properties\PublishProfiles\Web Deploy - Staging [b].pubxml" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
@@ -367,6 +378,7 @@
     <Content Include="Scripts\modernizr-2.6.2.min.js" />
     <Content Include="Scripts\modernizr.custom.51211.js" />
     <Content Include="Scripts\practical-packer.js" />
+    <Content Include="Scripts\practical-template.js" />
     <Content Include="Scripts\summary.js" />
     <Content Include="Unity.Mvc3.README.txt" />
     <Content Include="Unity.WebAPI.README.txt" />
