--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\APFTestingMembership\packages.config" />
   <repository path="..\APFTestingModel\packages.config" />
+  <repository path="..\APFTestingServices\packages.config" />
   <repository path="..\APFTestingUI.Tests\packages.config" />
   <repository path="..\APFTestingUI\packages.config" />
 </repositories>
