--- a/APFTestingHookIn/APFTestingHookIn.csproj
+++ b/APFTestingHookIn/APFTestingHookIn.csproj
@@ -48,9 +48,17 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\APFTestingMembership\APFTestingMembership.csproj">
+      <Project>{d20d7697-9c41-439c-8f51-bcef6b4d429b}</Project>
+      <Name>APFTestingMembership</Name>
+    </ProjectReference>
     <ProjectReference Include="..\APFTestingModel\APFTestingModel.csproj">
       <Project>{ecf00d40-4554-4da2-af68-848ff0b6d169}</Project>
       <Name>APFTestingModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\APFTestingServices\APFTestingServices.csproj">
+      <Project>{2fc47278-55df-48fc-9c9b-97f2a137f7f3}</Project>
+      <Name>APFTestingServices</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
